# ai-prompt-research

./: README.md  main.py  prompt.ipynb  pyproject.toml  test.ipynb
